<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/review_product"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/review_product_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/review_product_form_scv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/review_product_adding_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/product"
                android:id="@+id/textView"
                android:textColor="@color/accent_material_light"
                android:paddingLeft="15sp"
                android:textSize="40sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:id="@+id/products"
                    android:paddingLeft="15sp" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/productcategory"
                android:id="@+id/categories_review_product_label"
                android:paddingLeft="15sp"
                android:textColor="@color/accent_material_light"
                android:textSize="40sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:id="@+id/category"
                    android:paddingLeft="15sp" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/aboutproduct"
                android:id="@+id/aboutproduct"
                android:paddingLeft="15sp"
                android:textColor="@color/accent_material_light"
                android:textSize="40sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/aboutproduct"
                android:ems="10"
                android:id="@+id/full_about_product"
                android:paddingLeft="15sp" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/manufacturer"
                android:id="@+id/aboutmanufacturer"
                android:paddingLeft="15sp"
                android:textColor="@color/accent_material_light"
                android:textSize="40sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/manufacturer"
                android:ems="10"
                android:id="@+id/about_manufacturer"
                android:paddingLeft="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/addressofmanufacturer"
                android:id="@+id/address_manufacturer"
                android:paddingLeft="15sp"
                android:textColor="@color/accent_material_light"
                android:textSize="40sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/addressofmanufacturer"
                android:ems="10"
                android:id="@+id/address_of_manufacturer"
                android:paddingLeft="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/productingredients"
                android:id="@+id/product_ingredients"
                android:paddingLeft="15sp"
                android:textColor="@color/accent_material_light"
                android:textSize="40sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/productingredients"
                android:ems="10"
                android:id="@+id/ingredients"
                android:paddingLeft="15sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="textCapWords"
                    android:maxLines="3"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/take_image_from_camera_one"
                    android:layout_marginTop="10dp"
                    android:onClick="selectImage"
                    android:text="@string/product_image_one"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2d4bcf"
                    android:textColor="#fefcfc"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView android:id="@+id/product_image_one"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:contentDescription="@string/product_image_one"
                android:visibility="visible"
                android:maxWidth="@dimen/abc_action_bar_content_inset_material" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/take_image_from_camera_two"
                    android:layout_marginTop="10dp"
                    android:onClick="selectImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#2d4bcf"
                    android:textColor="#fefcfc"
                    android:text="@string/product_image_two"
                    android:paddingStart="10sp"
                    android:paddingEnd="10sp" />

            </android.support.design.widget.TextInputLayout>

            <ImageView android:id="@+id/product_image_two"
                android:layout_width="match_parent"
                android:layout_height="184dp"
                android:contentDescription="@string/product_image_two"
                android:visibility="visible"
                />

            <!--
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/enter_user_mic_comments"
                android:id="@+id/mic_comments"
                android:paddingLeft="15sp"
                android:textColor="@color/accent_material_light"
                android:textSize="40sp" />

            <ImageButton
                android:id="@+id/btnSpeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/enter_user_mic_comments"
                android:layout_gravity="center_horizontal"
                android:src="@android:drawable/ic_btn_speak_now" />
                -->

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/submit_new_product_review"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit_product_review"
                android:textStyle="bold"
                android:background="#2d4bcf"
                android:textColor="#fefcfc" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>